most thingies done?

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
     <div>Homepage</div>
     
     <div class="posts" id="selfPost">
-        <div id="name">DemoAcc</div>
-        <div id="username">demoUsername</div>
+        <div id="name">Your account</div>
+        <div id="username"></div>
         <textarea id="textBox">Fill in here</textarea>
         <button id="submit" onclick="submitPost()">Submit</button>
     </div>
