--- a/post.html
+++ b/post.html
@@ -15,18 +15,10 @@
         <a class="btn" href="home.html" role="button">Back</a>
     </div>
 
-    <div id="mainPost">
+    <div class="cont" id="mainPost">
 
     <div>Post page</div>
-    
-    <div class="posts" id="selfPost">
-        <div id="name">DemoAcc</div>
-        <div id="username">demoUsername</div>
-        <textarea id="textBox">Fill in here</textarea>
-        <button id="submit" onclick="submitComment()">Submit</button>
-    </div>
-
-    <div id="timelineDiv">
+    <div class="cont"  id="postDiv">
         <!--
         <div class="posts">
             <button id="like" class="likeButton">View more</button>
@@ -39,6 +31,14 @@
         </div> 
 -->
     </div>
+    <div class="posts" id="selfPost">
+        <div id="name">Your account</div>
+        <div id="username"></div>
+        <textarea id="textBox">Fill in here</textarea>
+        <button id="submit" onclick="submitComment()">Submit</button>
+    </div>
+    <div  class="cont" id="commentDiv">Replies:</div>
+
 
 
 
