--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!--  <link rel="stylesheet" type="text/css" href="css/post.css"> -->
-    <title>Post Side</title>
+    <title>Admin Stats Side</title>
 </head>
 
 <body onload="load()">
@@ -17,6 +17,14 @@
 
     <div id="mainPost">
         Admin table <br>
+        <div class="container">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" id="name" placeholder="Enter Username" name="uname" required>
+            <label for="psw"><b>Password</b></label>
+            <input type="password" id="pass" placeholder="Enter Password" name="psw" required>        
+            <button onclick="submit()">Signup/Login</button>
+         
+          </div>
 
     </div>
 
