--- a/frontend/home.html
+++ b/frontend/home.html
@@ -17,27 +17,18 @@
 
     <div id="mainPost">
 
-    <div>Homepage</div>
+    <h1>Homepage</h1>
     
     <div class="posts" id="selfPost">
-        <div id="name">Your account</div>
+        <h3 id="name">Your account</h3>
         <div id="username"></div>
-        <textarea id="textBox">Fill in here</textarea>
+        <textarea id="textBox" >Fill in here</textarea>
+        <br>
         <button id="submit" onclick="submitPost()">Submit</button>
     </div>
 
     <div id="timelineDiv">
-        <!--
-        <div class="posts">
-            <button id="like" class="likeButton">View more</button>
-            <div>Demo Law</div>
-            <div>demolawly</div>
-       
-            <p class="textBox">Demo text area</p>
-            <div class="likesNum">X Likes</div>
-            <button id="like" class="likeButton">Like</button>
-        </div> 
--->
+
     </div>
 
 
