--- a/frontend/post.html
+++ b/frontend/post.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" type="text/css" href="css/post.css"> 
-    <title>Home Side</title>
+    <title>Post Side</title>
 </head>
 
 <body onload="load()">
@@ -17,22 +17,12 @@
 
     <div class="cont" id="mainPost">
 
-    <div>Post page</div>
+    <h1>Post page</h1>
     <div class="cont"  id="postDiv">
-        <!--
-        <div class="posts">
-            <button id="like" class="likeButton">View more</button>
-            <div>Demo Law</div>
-            <div>demolawly</div>
-       
-            <p class="textBox">Demo text area</p>
-            <div class="likesNum">X Likes</div>
-            <button id="like" class="likeButton">Like</button>
-        </div> 
--->
+
     </div>
     <div class="posts" id="selfPost">
-        <div id="name">Your account</div>
+        <h3 id="name">Your account</h3>
         <div id="username"></div>
         <textarea id="textBox">Fill in here</textarea>
         <button id="submit" onclick="submitComment()">Submit</button>
