--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,20 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!--  <link rel="stylesheet" type="text/css" href="css/post.css"> -->
+<link rel="stylesheet" type="text/css" href="css/admin.css"> 
     <title>Admin Stats Side</title>
 </head>
 
 <body onload="load()">
 
     <div id="backButton">
-        <a class="btn" href="home.html" role="button">Back</a>
+        <a class="btn" href="login.html" role="button">Login</a>
+        <a class="btn" href="home.html" role="button">Home</a>
+        <a class="btn" href="admin.html" role="button">Stats</a>
     </div>
 
     <div id="mainPost">
         Admin table <br>
 
-
+<div id="table"></div>
     </div>
 
     <!-- the link to the javascript -->
