--- a/frontend/home.html
+++ b/frontend/home.html
@@ -12,7 +12,9 @@
 <body onload="load()">
 
     <div id="backButton">
-        <a class="btn" href="home.html" role="button">Back</a>
+        <a class="btn" href="login.html" role="button">Login</a>
+        <a class="btn" href="home.html" role="button">Home</a>
+        <a class="btn" href="admin.html" role="button">Stats</a>
     </div>
 
     <div id="mainPost">
