--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,7 +12,8 @@
 <body onload="">
 
     <div id="backButton">
-        <a class="btn" href="index.html" role="button">Back</a>
+        <a class="btn" href="documentation.html" role="button">Documentation</a>
+
     </div>
 
             <div class="container">
